# CppDecoder

./: .appveyor.yml  .editorconfig  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  Makefile  README.md
buildmodels/: dgaussian_monopohoneme_I01.example.model
ci/: build_linux.sh  build_osx.sh  build_unix.sh
code/: DGaussianAcousticModel.cpp  DGaussianAcousticModel.h  DGaussianAcousticModel.hpp  Makefile  MixtureAcousticModel.cpp  MixtureAcousticModel.h  MixtureAcousticModel.hpp  SearchGraphLanguageModel.cpp  SearchGraphLanguageModel.h  TiedStatesAcousticModel.cpp  TiedStatesAcousticModel.h  Utils.h
cppdecoder/: CMakeLists.txt  main.cpp
cppdecoder/acoustic_model/: CMakeLists.txt
cppdecoder/acoustic_model/include/: AcousticModel.h  DGaussianAcousticModel.h  MixtureAcousticModel.h  TiedStatesAcousticModel.h
cppdecoder/acoustic_model/src/: DGaussianAcousticModel.cpp  Main.cpp  MixtureAcousticModel.cpp  TiedStatesAcousticModel.cpp
cppdecoder/acoustic_model/test/: CMakeLists.txt
cppdecoder/acoustic_model/test/src/: acoustic_model_test.cpp  dgaussian_acoustic_model_test.cpp  mixture_acoustic_model_test.cpp  tiedstates_acoustic_model_test.cpp
cppdecoder/d_gaussian_acustic_model/: CMakeLists.txt
cppdecoder/d_gaussian_acustic_model/include/: DGaussianAcousticModel.h
cppdecoder/d_gaussian_acustic_model/include/d_gaussian_acustic_model/: DGaussianAcousticModel.h
cppdecoder/d_gaussian_acustic_model/src/: DGaussianAcousticModel.cpp
cppdecoder/decoder/: CMakeLists.txt
cppdecoder/decoder/include/: Decoder.h  Decoder.inl  HMM.h
cppdecoder/decoder/src/: Decoder.cpp  HMM.cpp
cppdecoder/decoder/test/: CMakeLists.txt
cppdecoder/decoder/test/src/: decoder_test.cpp  hmm_test.cpp
cppdecoder/feature/: CMakeLists.txt
cppdecoder/feature/include/: Feature.h
cppdecoder/feature/src/: Feature.cpp
cppdecoder/frame/: CMakeLists.txt
cppdecoder/frame/include/: Frame.h
cppdecoder/frame/src/: Frame.cpp
cppdecoder/mixture_acoustic_model/: CMakeLists.txt
cppdecoder/mixture_acoustic_model/include/: MixtureAcousticModel.h
cppdecoder/mixture_acoustic_model/include/mixture_acoustic_model/: MixtureAcousticModel.h
cppdecoder/mixture_acoustic_model/src/: MixtureAcousticModel.cpp
cppdecoder/sample/: CMakeLists.txt
cppdecoder/sample/include/: Frame.h  Sample.h  Sample.inl
cppdecoder/sample/src/: Frame.cpp  Sample.cpp
cppdecoder/sample/test/: CMakeLists.txt
cppdecoder/sample/test/src/: frame_test.cpp  sample_test.cpp
cppdecoder/search_graph_language_model/: CMakeLists.txt
cppdecoder/search_graph_language_model/SearchGraphLanguageModel/: SearchGraphLanguageModel.h
cppdecoder/search_graph_language_model/include/: SearchGraphLanguageModel.h
cppdecoder/search_graph_language_model/src/: SearchGraphLanguageModel.cpp
cppdecoder/search_graph_language_model/test/: CMakeLists.txt
cppdecoder/search_graph_language_model/test/src/: search_graph_language_model_test.cpp
cppdecoder/tied_states_acoustic_model/: CMakeLists.txt
cppdecoder/tied_states_acoustic_model/include/: TiedStatesAcousticModel.h
cppdecoder/tied_states_acoustic_model/include/tied_states_acoustic_model/: TiedStatesAcousticModel.h
cppdecoder/tied_states_acoustic_model/src/: TiedStatesAcousticModel.cpp
cppdecoder/utils/: CMakeLists.txt
cppdecoder/utils/include/: Utils.h
cppdecoder/utils/include/Utils/: Utils.h
cppdecoder/utils/src/: Utils.cpp
cppdecoder/utils/test/: CMakeLists.txt
cppdecoder/utils/test/src/: utils_test.cpp
models/: model_0
samples/: AAFA0002.features
unittests/: CMakeLists.txt  utils_test.cpp
